--- a/src/views/admin/styles.ejs
+++ b/src/views/admin/styles.ejs
@@ -7,7 +7,7 @@
   </div>
 
   <!-- Поисковая строка-->
-  <div class="search-section">
+  <div class="search-section centered">
     <div class="search-container">
       <input
         type="text"
