added cancel ticket

--- a/src/views/artworks.ejs
+++ b/src/views/artworks.ejs
@@ -65,4 +65,9 @@
   </div>
 </main>
 
+<!-- Lightbox для просмотра изображений картин -->
+<div id="image-lightbox" class="image-lightbox">
+  <img id="lightbox-img" class="lightbox-img" alt="Изображение картины" />
+</div>
+
 <script src="/js/artworks.js"></script>
